2004-04-10  Miguel de Icaza  <miguel@ximian.com>

	* expression.cs (Binary.ResolveOperator): Do no append strings
	twice: since we can be invoked more than once (array evaluation)
	on the same concatenation, take care of this here.  Based on a fix
	from Ben (bug #56454)

2004-04-08  Sebastien Pouliot  <sebastien@ximian.com>

	* codegen.cs: Fix another case where CS1548 must be reported (when 
	delay-sign isn't specified and no private is available #56564). Fix
	loading	the ECMA "key" to delay-sign an assembly. Report a CS1548 
	error when MCS is used on the MS runtime and we need to delay-sign 
	(which seems unsupported by AssemblyBuilder - see #56621).

2004-04-08  Marek Safar  <marek.safar@seznam.cz>

	* typemanager.cs (TypeManager.TypeToCoreType): Handle IntPtr too.
	(TypeManager.ComputeNamespaces): Faster implementation for
	Microsoft runtime.

	* compiler.csproj: Updated AssemblyName to mcs.

2004-04-07  Miguel de Icaza  <miguel@ximian.com>

	* rootcontext.cs: Add new types to the boot resolution.

	* ecore.cs (TypeExpr.CanInheritFrom): Inheriting from
	MulticastDelegate is not allowed.

	* typemanager.cs: Add new types to lookup: System.TypedReference
	and ArgIterator.

	* paramter.cs (Parameter.Resolve): if we are an out/ref parameter,
	check for TypedReference or ArgIterator, they are not allowed. 

	* ecore.cs (BoxedCast): Set the eclass to ExprClass.Value, this
	makes us properly catch 1510 in some conditions (see bug 56016 for
	details). 

2004-04-06  Bernie Solomon  <bernard@ugsolutions.com>

	* CryptoConvert.cs: update from corlib version
	with endian fixes.

2004-04-05  Miguel de Icaza  <miguel@ximian.com>

	* class.cs (Indexer.Define): Check indexername declaration

2004-04-05  Marek Safar  <marek.safar@seznam.cz>

	* attribute.cs (IsClsCompliant): Fixed problem with handling
        all three states (compliant, not-compliant, undetected).

2004-03-30  Marek Safar  <marek.safar@seznam.cz>

	* attribute.cs (Attribute): Location is now public.